:bug: java 8 compliance